css/core.css
@import "https://fonts.googleapis.com/css?family=Roboto:500,400,300";
@import "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300";
@import "https://fonts.googleapis.com/earlyaccess/notosansjapanese.css";

* {
    -webkit-user-select: none;
    -moz-user-select: none;
}

html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    font-family: "Roboto", "Noto Sans Japanese", sans-serif;
    overflow: hidden;
    color: #555;
}

a {
    font: inherit;
    color: inherit;
    text-decoration: none;
}

p {
    margin: 0;
    padding: 5px;
}

input:focus,
button:focus { outline: none; }

.overlay {
    display: none;
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: 1000;
    background: rgba(0, 0, 0, 0.35);
}

.desktop {
    height: 100%;
    width: 100%;
    font-family: "Roboto", "Noto Sans Japanese", sans-serif;
    background: url(../wallpapers/wally.png) no-repeat center center fixed;
    background-size: cover;
}

::-webkit-scrollbar {
    -webkit-appearance: none;
    padding: 2px 0;
    width: 8px;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
}

::-webkit-scrollbar-button { display: none; }
::-webkit-scrollbar-corner { display: none; }
::-webkit-resizer { display: none; }

::-webkit-scrollbar-track {
    background: #EEE;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
}

::-webkit-scrollbar-thumb {
    background: #DDD;
}

